package com.enemy;


import com.level.Field;
import com.model.AdjacencyList;

public class Dijkstra {


        public void FindShortestPath(AdjacencyList<Field> graph,Field[][] startKnot ){



        }

}
