package com.pawns;

public enum AttackType {
    HEALTH, SPEED, SIZE

}
