package com.pawns;

public class Bug extends Pawn {
    @Override
    void move() {

    }

    @Override
    void attack() {

    }
}
