package com.pawns;

/**
 * Class represents one part of a pawn on the field
 */
public class PawnSegment {

    private Position position;

    public PawnSegment(int x, int y, Boolean head) {
        this.position = new Position(x, y);

    }



}
