package com.pawns;

public abstract class pawn {

    abstract void move();

}
