package com.player;

public class PawnType {
}
