package com.player;

import java.util.ArrayList;

public class Player {

    ArrayList<PawnType> catalogue;


}
