@startuml

title __SPYBOT.APP's Class Diagram__\n

  namespace  {
    namespace om.enemy {
      class com.enemy.Dijkstra {
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.BuildConfig {
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.LevelSelection {
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.MainActivity {
      }
    }
  }
  

  namespace  {
    namespace om.example.spybot {
      class com.example.spybot.MainMenu {
      }
    }
  }
  

  namespace  {
    namespace om.level {
      class com.level.Board {
      }
    }
  }
  

  namespace  {
    namespace om.level {
      class com.level.Field {
      }
    }
  }
  

  namespace  {
    namespace om.level {
      class com.level.Level {
      }
    }
  }
  

  namespace  {
    namespace om.model {
      class com.model.AdjacencyList {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      abstract class com.pawns.Attack {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      enum AttackType {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      class com.pawns.Bite {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      class com.pawns.Body {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      class com.pawns.Bug {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      abstract class com.pawns.Pawn {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      class com.pawns.PawnSegment {
      }
    }
  }
  

  namespace  {
    namespace om.pawns {
      class com.pawns.Position {
      }
    }
  }
  

  namespace  {
    namespace om.player {
      class com.player.PawnType {
      }
    }
  }
  

  namespace  {
    namespace om.player {
      class com.player.Player {
      }
    }
  }
  

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.AppSetting {
      }
    }
  }
  

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.MainActivity {
      }
    }
  }
  

  namespace  {
    namespace om.spybot.app {
      class com.spybot.app.MainMenu {
      }
    }
  }
  

  namespace  {
    namespace om.utility {
      class com.utility.Utility {
      }
    }
  }
  

  com.example.spybot.LevelSelection .up.|> android.view.View.OnClickListener
  com.example.spybot.LevelSelection -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.spybot.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.spybot.MainActivity o-- com.level.Board : board
  com.example.spybot.MainMenu .up.|> android.view.View.OnClickListener
  com.example.spybot.MainMenu -up-|> androidx.appcompat.app.AppCompatActivity
  com.level.Level o-- com.level.Board : board
  com.pawns.Attack o-- com.pawns.AttackType : type
  com.pawns.Bite -up-|> com.pawns.Attack
  com.pawns.Body o-- com.pawns.Pawn : head
  com.pawns.Body o-- com.pawns.Position : position
  com.pawns.Bug -up-|> com.pawns.Pawn
  com.pawns.Pawn o-- com.pawns.Attack : attack1
  com.pawns.Pawn o-- com.pawns.Attack : attack2
  com.spybot.app.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.spybot.app.MainMenu .up.|> android.view.View.OnClickListener
  com.spybot.app.MainMenu -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
